# OpenAIChatHelper

./: README.md  TODO.md  example_usage.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: release.yml  test.yml
OpenAIChatHelper/: ChatCompletion.py  ChatCompletionEndPoint.py  Contents.py  Message.py  __init__.py
OpenAIChatHelper/message/: Contents.py  Message.py  MessageList.py  ToolCalls.py  __init__.py
OpenAIChatHelper/utils/: Logging.py  StringOperations.py  __init__.py
OpenAIHelper/: ChatCompletion.py  Config.py  EndPoint.py  Message.py  MessageList.py  __init__.py
OpenAIHelper/utils/: Logging.py  StringOperations.py
src/: Chat.py  ChatCompletion.py  Config.py  EndPoint.py  Message.py  MessageList.py  SubstitutionDict.py  __init__.py
test/: Message.py
tests/: test_chat_completion.py  test_contents.py  test_general.py  test_logging.py  test_string_options.py  test_utils.py
