[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "OpenAIChatHelper"
version = "0.1.0-alpha"
description = "A helper package for OpenAI API"
authors = [{ name = "Yining Hong", email = "yhong3@andrew.cmu.edu" }]
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.poetry]
name = "OpenAIHelper"
version = "0.1.0-alpha"
description = "A helper package for OpenAI API"
authors = ["Yining Hong <yhong3@andrew.cmu.edu>"]

[tool.poetry.dependencies]
python = "^3.7"
openai = ">=1.0.0"

[tool.setuptools.packages.find]
where = ["."]
