[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "OpenAIChatHelper"
version = "0.1.0"
description = "A helper package for OpenAI API"
authors = [{ name = "Yining Hong", email = "yhong3@andrew.cmu.edu" }]
requires-python = ">=3.7"
license = { text = "MIT" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = ["openai>=1.0.0", "markdown-it-py>=3.0.0", "mdformat>=0.7.0"]

[tool.setuptools.packages.find]
where = ["."]
